attempt to fix overflow-x on mobile devices

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -47,6 +47,15 @@ html{width: auto !important; overflow-x: hidden !important;}
 
 body {font-family: $open-sans; color:$darkish-grey}
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 
 .hex-tile{
     position: absolute;
